--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -79,7 +79,7 @@
     <div class="input-row">
       <div class="input-label">Password</div>
       <div class="input-container">
-        <input id="input-premium-password" type="text" />
+        <input id="input-premium-password" type="password" />
       </div>
     </div>
 
@@ -91,21 +91,24 @@
     <div class="input-row">
       <div class="input-label">Street</div>
       <div class="input-container">
-        <input type="text" />
+        <input id="input-address-street" type="text" />
       </div>
     </div>
 
     <div class="input-row">
       <div class="input-label">City</div>
       <div class="input-container">
-        <input type="text" />
+        <input id="input-address-city" type="text" />
       </div>
     </div>
 
     <div class="input-row">
       <div class="input-label">Country</div>
       <div class="input-container">
-        <input type="text" />
+        <select id="input-address-country">
+          <option value="US">United States</option>
+          <option value="CA">Canada</option>
+        </select>
       </div>
     </div>
 
