--- a/views/index.mustache
+++ b/views/index.mustache
@@ -393,42 +393,7 @@
 <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/home.min.js"></script>
-<script>
-  (function(){
-    var data = window.__PRELOADED__
-    if (data.stripe==null)
-      return
-
-    var stripeStyle = {
-    	base: {
-    		color: '#32325d',
-    		lineHeight: '18px',
-    		fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-    		fontSmoothing: 'antialiased',
-    		fontSize: '16px',
-    		'::placeholder': {
-    			color: '#aab7c4'
-    		}
-    	},
-    	invalid: {
-    		color: '#fa755a',
-    		iconColor: '#fa755a'
-    	}
-    }
-
-    var stripeMgr = Stripe(data.stripe)
-    var card = stripeMgr.elements().create('card', {style: stripeStyle}) // Create an instance of the card Element.
-		card.mount('#card-element') // Add an instance of the card Element into the `card-element` <div>.
-
-    // Handle real-time validation errors from the card Element.
-		card.addEventListener('change', function(event){
-			var displayError = document.getElementById('card-errors')
-			displayError.textContent = (event.error) ? event.error.message : ''
-		})
-
-
-  })()
-</script>
+<script type="text/javascript" src="{{{cdn}}}/dist/js/card.min.js"></script>
 {{#cdn}}{{>analytics}}{{/cdn}}
 
 </body>
