--- a/views/submitpost.mustache
+++ b/views/submitpost.mustache
@@ -193,8 +193,23 @@
         if (event)
           event.preventDefault()
 
-        confirm('Are you sure? This cannot be reversed.')
+        if (post.id == null)
+          return
 
+        if (confirm('Are you sure? This cannot be reversed.')!=true)
+          return
+
+        $.ajax({
+          url: '/api/post/'+post.id,
+          type: 'DELETE',
+          data: null,
+          success: function(response){
+            window.location.href = '/community?selected=blog'
+          },
+          error: function(response, err){
+            alert('Error - ' + JSON.stringify(response))
+          }
+        })
       })
 
     })()
