--- a/views/partials/auth.mustache
+++ b/views/partials/auth.mustache
@@ -70,6 +70,13 @@
 
   <form method="post" class="login">
     <div class="input-row">
+      <div class="input-label">Name</div>
+      <div class="input-container">
+        <input id="input-premium-name" type="text" />
+      </div>
+    </div>
+
+    <div class="input-row">
       <div class="input-label">Email</div>
       <div class="input-container">
         <input id="input-premium-email" type="text" />
