--- a/views/index.mustache
+++ b/views/index.mustache
@@ -514,8 +514,15 @@
           return
         }
 
-        alert('SUCCESS - ' + JSON.stringify(response))
-        // TODO: create new profile with name, email, password
+        //create new profile with name, email, password
+        postRequest('/api/profile', {fullName:visitor.name, email:visitor.email, password:visitor.password, accountType:'pro'}, function(err2, response2){
+          if (err2){
+            alert('ERROR - ' + err2)
+            return
+          }
+
+          window.location.href = '/me'
+        })
       })
 
 			return
