updated nav bar

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -58,8 +58,7 @@
   				<div class="header-widget">
             <nav id="navigation" class="style-1">
     					<ul id="responsive">
-    						<li><a class="current" href="/">Home</a></li>
-    						<li><a id="nav-how-it-works" href="/?selected=how+it+works">About</a></li>
+                <li><a href="/community?selected=templates">Templates</a></li>
                 <li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
                 <li><a href="/community">Community</a></li>
   							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
