show header-widget on md screen sizes

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -55,7 +55,7 @@
   			</div>
 
   			<div id="nav-menu" class="right-side">
-          <div class="header-widget hidden-xs hidden-sm hidden-md">
+          <div class="header-widget hidden-xs hidden-sm">
             <nav id="navigation" class="style-1">
     					<ul id="responsive">
                 <li><a href="/community?selected=templates">Templates</a></li>
