--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -21,7 +21,7 @@
 
 
 			<div id="nav-menu" class="right-side hidden-xs">
-				<div class="header-widget hidden-xs hidden-sm hidden-md">
+				<div class="header-widget hidden-xs hidden-sm">
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
   						<li><a href="/community?selected=templates">Templates</a></li>
