add professional and community template options

--- a/views/account.mustache
+++ b/views/account.mustache
@@ -215,6 +215,8 @@
               <option value="resume">Resume</option>
               <option value="landing">Landing</option>
               <option value="portfolio">Portfolio</option>
+              <option value="professional">Professional</option>
+              <option value="community">Community</option>
             </select>
           </div>
 
