--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -316,7 +316,7 @@
         <span>·</span>
         <% dateString %>
       </small>
-      <p class="margin-top-10"><% text %></p>
+      <p class="margin-top-10"><%{text}%></p>
     </div>
   </script>
 
