--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -51,6 +51,10 @@
       color: #000;
     }
 
+    .reply-box a {
+      color: red;
+    }
+
     .message-bubble input {
       border: none !important;
       box-shadow: none !important;
