--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -140,6 +140,10 @@
       color: #000;
     }
 
+    .reply-box a {
+      color: red;
+    }
+
     @media (min-width: 768px)  {
       #profile-card {
         position:fixed;
