link to profile slug not username

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -267,11 +267,11 @@
 
 <script type="text/template" id="tpl-reply">
   <div class="reply-box">
-    <a href="/profile/<% profile.username %>">
+    <a href="/profile/<% profile.slug %>">
       <img src="<%{profile.image}%>=s96-c" alt="" />
     </a>
     <small>
-      by <a class="text-blue" href="/profile/<% profile.username %>"><% profile.username %></a>
+      by <a class="text-blue" href="/profile/<% profile.slug %>"><% profile.username %></a>
       <span>·</span>
       <% dateString %>
     </small>
