show post hyperlinks as red

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -44,7 +44,7 @@
       min-width: 320px;
     }
 
-    .post-text a {
+    .post-content a {
       color: red;
     }
   </style>
@@ -84,7 +84,7 @@
     					  <h4 class="margin-bottom-0 capitalize">{{post.author.firstName}} {{post.author.lastName}}</h4>
               </a>
     					<a href="/profile/{{post.author.slug}}">{{post.author.username}}</a>
-    					<p class="post-text">{{{post.author.bio}}}</p>
+    					<p>{{{post.author.bio}}}</p>
     				</div>
     			</div>
 
