sidebar register and login functions

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -217,17 +217,17 @@
             <h4 class="gray">Register or Login</h4>
             <div class="dashboard-list-box-static">
               <div class="input-container margin-left-0">
-                <input id="input-profile-firstName" type="text" placeholder="Email" />
+                <input id="input-sidebar-email" type="text" placeholder="Email" />
               </div>
 
               <div class="input-container margin-left-0">
-                <input id="input-profile-lastName"type="text" placeholder="Password" />
+                <input id="input-sidebar-password" type="password" placeholder="Password" />
               </div>
 
               <hr />
               <div style="display:flex">
-                <button class="button small-button margin-right-10">LOG IN</button>
-                <button class="button small-button">JOIN</button>
+                <button id="btn-sidebar-login" class="button small-button margin-right-10">LOG IN</button>
+                <button id="btn-sidebar-register" class="button small-button">JOIN</button>
               </div>
             </div>
           </div>
