--- a/views/community.mustache
+++ b/views/community.mustache
@@ -279,17 +279,17 @@
             <h4 class="gray">Register or Login</h4>
             <div class="dashboard-list-box-static">
               <div class="input-container margin-left-0">
-                <input id="input-profile-firstName" type="text" placeholder="Email" />
+                <input id="input-sidebar-email" type="text" placeholder="Email" />
               </div>
 
               <div class="input-container margin-left-0">
-                <input id="input-profile-lastName"type="text" placeholder="Password" />
+                <input id="input-sidebar-password" type="password" placeholder="Password" />
               </div>
 
               <hr />
               <div style="display:flex">
-                <button class="button small-button margin-right-10">LOG IN</button>
-                <button class="button small-button">JOIN</button>
+                <button id="btn-sidebar-login" class="button small-button margin-right-10">LOG IN</button>
+                <button id="btn-sidebar-register" class="button small-button">JOIN</button>
               </div>
             </div>
           </div>
@@ -332,6 +332,99 @@
   <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/community.min.js"></script>
+  <script>
+    (function(){
+      var data = window.__PRELOADED__
+      var user = data.user
+
+      if (user != null) // user already logged in
+        return
+
+      var postRequest = function(url, params, completion){
+        $.ajax({
+          url: url,
+          type: 'POST',
+          data: params,
+          success: function(response){
+            completion(null, response)
+          },
+          error: function(response){
+            completion(response, null)
+          }
+        })
+      }
+
+      $('#btn-sidebar-login').click(function(event){
+        if (event)
+          event.preventDefault()
+
+        var visitor = {
+          email: $('#input-sidebar-email').val(),
+          password: $('#input-sidebar-password').val()
+        }
+
+        if (visitor.email.length == 0){
+          alert('Please enter your EMAIL')
+          return
+        }
+
+        if (visitor.password.length == 0){
+          alert('Please enter your PASSWORD')
+          return
+        }
+
+        // console.log('LOGIN: ' + JSON.stringify(visitor))
+        postRequest('/account/login', visitor, function(err, response){
+          if (err){
+            alert('Error - ' + err)
+            return
+          }
+
+          if (response.confirmation != 'success'){
+            alert('Error - ' + response.message)
+            return
+          }
+
+          window.location.href = '/me'
+        })
+      })
+
+      $('#btn-sidebar-register').click(function(event){
+        if (event)
+          event.preventDefault()
+
+        var visitor = {
+          email: $('#input-sidebar-email').val(),
+          password: $('#input-sidebar-password').val()
+        }
+
+        if (visitor.email.length == 0){
+          alert('Please enter your EMAIL')
+          return
+        }
+
+        if (visitor.password.length == 0){
+          alert('Please enter your PASSWORD')
+          return
+        }
+
+        // console.log('REGISTER: ' + JSON.stringify(visitor))
+        postRequest('/account/register', visitor, function(err, response){
+          if (err){
+            alert('Error - ' + err)
+            return
+          }
+
+          if (response.confirmation != 'success'){
+            alert('Error - ' + response.message)
+            return
+          }
+
+          window.location.href = '/me'
+        })
+      })
+    })()
+  </script>
   {{#cdn}}{{>analytics}}{{/cdn}}
 </body>
 </html>
