sidebar js for auth

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -283,6 +283,7 @@
 
   <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+  <script type="text/javascript" src="{{{cdn}}}/dist/js/sidebar.min.js"></script>
   <script>
     (function(){
       Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
