remove vertex 360 from comment title

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
   <link rel="icon" href="https://lh3.googleusercontent.com/iGeI_uAeybirO0eIxs1x0xybUSFPRVa8lEluDtl5_0q_z-Xwy4GWLLn3sX9MhNJg3MZFGr3fsmqcMNvnE5XZL737ppM=s32-c" type="image/png" />
 
-  <meta property="og:title" content="Vertex 360 | {{comment.title}}" />
+  <meta property="og:title" content="{{comment.title}}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="https://www.vertex360.co/comments/{{comment.slug}}" />
 	<meta property="og:image" content="{{{comment.image}}}=s260-c" />
