--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -9,23 +9,31 @@
 				</p>
 			</div>
 
-			<div class="col-md-3 col-sm-12 col-xs-6 col-md-offset-1">
+			<div class="col-md-2 col-sm-12 col-xs-6 col-md-offset-1">
 				<ul class="footer-links margin-top-30" style="width:100%">
 					<li><a href="/?selected=faq">FAQ</a></li>
 					<li><a href="/templates">Templates</a></li>
-					<li><a href="/?selected=how+it+works">About</a></li>
 					<li><a href="/community">Community</a></li>
+					<li><a href="#">Terms of Use</a></li>
+					<li><a href="#">Privacy Policy</a></li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
 
-			<div class="col-md-3 col-sm-12 col-xs-6">
-				<ul class="footer-links margin-top-30" style="width:100%">
-					<li><a href="/?selected=faq">Developers</a></li>
-					<li><a href="/templates">Documentation</a></li>
-					<li><a href="#">Terms of Use</a></li>
-					<li><a href="#">Privacy Policy</a></li>
-				</ul>
+			<div class="col-md-4 col-sm-12 col-xs-6">
+				<h3 class="margin-top-30" style="color:#fff">Newsletter</h3>
+				<form id="add-comment" class="add-comment">
+	        <div class="input-row margin-left-0">
+	          <div class="input-container margin-left-0">
+	            <input placeholder="Email" id="input-newsletter-email" type="text" />
+	          </div>
+	        </div>
+
+	        <div style="text-align:right">
+	          <button id="btn-newsletter-subscribe" class="button">Sign Up!</button>
+	        </div>
+	        <div class="clearfix"></div>
+	      </form>
 				<div class="clearfix"></div>
 			</div>
 		</div>
