add blog menu option for mobile

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -25,9 +25,10 @@
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
   						<li><a href="/community?selected=templates">Templates</a></li>
-							<li class="hidden-xs"><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
+							<li class="hidden-xs hidden-sm"><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
+							<li class="hidden-md hidden-lg"><a href="/community?selected=blog">Blog</a></li>
 							<li><a id="nav-faq" href="/community">Community</a></li>
-							<li class="hidden-xs"><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
+							<li class="hidden-xs hidden-sm"><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
           <div id="login-container" class="hidden-xs hidden-sm">
