--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -12,7 +12,7 @@
 			<div class="col-md-2 col-sm-12 col-xs-12 col-md-offset-1">
 				<ul class="footer-links margin-top-30" style="width:100%">
 					<li><a href="/?selected=faq">FAQ</a></li>
-					<li><a href="/templates">Templates</a></li>
+					<li><a href="/community?selected=templates">Templates</a></li>
 					<li><a href="/community">Community</a></li>
 					<li><a href="#">Terms of Use</a></li>
 					<li><a href="#">Privacy Policy</a></li>
