remove commented out code

--- a/views/post.mustache
+++ b/views/post.mustache
@@ -206,14 +206,9 @@
         event.preventDefault()
 
       var subscriber = {
-        name: $('#input-newsletter-name').val(),
+//        name: $('#input-newsletter-name').val(),
         email: $('#input-newsletter-email').val()
       }
-
-      // if (subscriber.name.length == 0){
-      //   alert('Please enter your NAME')
-      //   return
-      // }
 
       if (subscriber.email.length == 0){
         alert('Please enter your EMAIL')
