--- a/views/event.mustache
+++ b/views/event.mustache
@@ -80,7 +80,7 @@
               <img style="max-width:60%" class="post-img" src="{{{event.image}}}=s1024" alt="Vertex 360 | {{template.name}}">
     					{{{event.description}}}
               <h4>When</h4>
-              <p>{{dateString}}<br />{{location.address}}</p>
+              <p>{{event.dateString}}<br />{{event.location.address}}</p>
     				</div>
 
             <!-- About Author -->
